--- a/css/d3.css
+++ b/css/d3.css
@@ -175,12 +175,20 @@ input[type=range]:focus::-ms-fill-upper {
   background: #367ebd;
 }
 
-.elapsed {
-  margin-top: 30px;
+.display {
   color: #cc2200;
-  font-size: 18px !important;
-  font-style: italic;
-  float: right;
+  font-size: 14px;
+  font-family: "monospace";
+  margin-left: auto;
+  border-radius: 20px;
+  width: 300px;
+  background: linear-gradient(to bottom right, #268CBC, #2DC5DF);
+  text-align: center;
+  padding-top: 4px;
+  margin-top: -5px;
+}
+
+.elapsed {
   display: none;
 }
 
@@ -209,6 +217,32 @@ input[type=range]:focus::-ms-fill-upper {
   text-indent:0;
 }
 
+.controls{
+  padding: 10px 20px 6px;
+  border-radius: 20px 20px;
+  height: 40px;
+  background: linear-gradient(#ccc, #555);
+  font-size: 2em;
+  display: flex;
+}
+
+.controls .fa {
+  margin: 2px 10px 0px;
+  color: white;
+  cursor: pointer;
+}
+
+.control-options {
+  padding: 10px 20px 6px;
+  height: 40px;
+  font-size: 0.8em;
+}
+
+.control-options .fa {
+  color: white;
+  font-size: 2em;
+}
+
 .actions {
   padding: 10px 10px 22px 0;
 }
@@ -229,10 +263,11 @@ input[type=range]:focus::-ms-fill-upper {
   height: 60px;
 }
 
-.actions .icontext {
+.controls .icontext {
   font-size: 10px;
   text-align: center;
   margin-top: 5px;
+  color: #111;
 }
 
 .actions button{
@@ -243,11 +278,65 @@ input[type=range]:focus::-ms-fill-upper {
   cursor: pointer;
 }
 
-.counts{
+.counts {
+  /*
   float:left;
   width:46%;
   padding-right:4%;
   margin-bottom:20px;
+  */
+  padding: 10px;
+  background-color: #303030;
+  display: inline-block;
+  margin-top: 40px;
+  height: 100px;
+  text-align: center;
+  margin: 4px;
+  float: left;
+  margin-top: 40px;
+}
+
+.two-counts {
+  width: 70%;
+}
+
+.one-count {
+  width: 20%;
+}
+
+.counts table {
+  width: 100%;
+}
+
+.counts td {
+  height: 1.2em;
+}
+
+
+.count-labels {
+  font-size: 0.8em;
+  text-align: right;
+}
+
+.count-values {
+  font-size: 2em;
+}
+
+.counts h4 {
+  margin: 0;
+  padding: 0;
+}
+
+.node-counts {
+  color: #ae81ff;
+}
+
+.conn-counts {
+  color: #f69047;
+}
+
+.msg-counts {
+  color: #07C288;
 }
 
 .counts-table td{
@@ -283,6 +372,7 @@ input[type=range]:focus::-ms-fill-upper {
 
 .node-bar {
   display:none;
+  margin-top: 20px;
 }
 
 #error-messages {
@@ -311,6 +401,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .nodes {
+  z-index: 100;
 }
 
 .new-node {
@@ -481,4 +572,16 @@ line:hover {
 
 #chord-diagram {
   background-color: #bbb;
+}
+
+.action-div {
+  cursor: pointer;
+  padding: 10px;
+  float: left;
+  position: absolute;
+  top: 10%;
+  margin-left: 20px;
+  border: 1px solid #777;
+  background-color: #777;
+  color: white;
 }
