--- a/css/d3.css
+++ b/css/d3.css
@@ -104,8 +104,8 @@ input[type=range]::-webkit-slider-runnable-track {
 input[type=range]::-webkit-slider-thumb {
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
-  height: 36px;
-  width: 16px;
+  height: 24px;
+  width: 12px;
   border-radius: 3px;
   background: #ffffff;
   cursor: pointer;
@@ -128,8 +128,8 @@ input[type=range]::-moz-range-track {
 input[type=range]::-moz-range-thumb {
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
-  height: 36px;
-  width: 16px;
+  height: 24px;
+  width: 12px;
   border-radius: 3px;
   background: #ffffff;
   cursor: pointer;
@@ -159,8 +159,8 @@ input[type=range]::-ms-fill-upper {
 input[type=range]::-ms-thumb {
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
-  height: 36px;
-  width: 16px;
+  height: 24px;
+  width: 12px;
   border-radius: 3px;
   background: #ffffff;
   cursor: pointer;
@@ -294,7 +294,7 @@ input[type=range]:focus::-ms-fill-upper {
 .count-label {
   color: whitesmoke;
   display: inline-block;
-  width: 80px;
+  width: 60px;
   margin: 0;
 }
   
@@ -570,6 +570,14 @@ tr.selectelement td {
 #backend-nok {
   border: 1px solid red;
   background-color: red;
+}
+
+.power-on {
+  color: green !important;
+}
+
+.power-off {
+  color: red !important;
 }
 
 .monitor-label {
