UI improvements; replay vis run (timemachine)

--- a/css/d3.css
+++ b/css/d3.css
@@ -97,7 +97,7 @@ input[type=range]::-webkit-slider-runnable-track {
   cursor: pointer;
   animate: 0.2s;
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #3071a9;
+  background: #f69047;
   border-radius: 1.3px;
   border: 0.2px solid #010101;
 }
@@ -234,6 +234,7 @@ input[type=range]:focus::-ms-fill-upper {
   height: 40px;
   font-size: 0.8em;
   margin-bottom: 10px;
+  padding-top: 15px;
 }
 
 .control-options .fa {
@@ -471,11 +472,13 @@ input[type=range]:focus::-ms-fill-upper {
   font-weight: bold;
   color: #f69047;
   border: 1px solid #f69047;
-  position: absolute;
   z-index: 2000;
   cursor: pointer;
   text-align: center;
   font-size: 20px;
+  float: right;
+  margin-top: -20px;
+  margin-right: -20px;
 }
 
 .dialogframe {
@@ -642,3 +645,65 @@ line {
   z-index: 10;
 }
 
+button.speedDial {
+  border-radius: 14px;
+  line-height: 14px;
+  width: 28px;
+  height: 28px;
+  background-color: #303030;
+  display: inline-block;
+  color: #f69047;
+  border: 2px solid #f69047;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.timemachine-section {
+  display: none;
+  margin: 10px 0;
+}
+
+label {
+  margin-right: 5px;
+}
+
+.timemachine-section label {
+  font-size: 0.8em;
+}
+
+.timemachine-section input[type=text] {
+  border: 2px solid #f69047;
+  width: 40px;
+  height: 20px;
+  margin: 0 20px;
+  padding: 0 10px;
+  text-align: center;
+  background-color: #303030;
+  color: #f69047;
+
+}
+
+.checkbox {
+  vertical-align: middle;
+}
+
+label input {
+  display: none;/* <-- hide the default checkbox */
+}
+label span {/* <-- style the artificial checkbox */
+  height: 20px;
+  width: 20px;
+  border: 1px solid #f69047;
+  display: inline-block;
+  position: relative;
+  background-color: #303030;
+  vertical-align:middle;
+
+}
+[type=checkbox]:checked + span:before {/* <-- style its checked state..with a ticked icon */
+  content: '\2714';
+  position: absolute;
+  left: 2px;
+  line-height: 20px;
+  font-size: 20px;
+}
